--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
                 <div class="header-menu"><a href="">LIÊN HỆ</a></div>
             </div>
             <div class="right">
-                <div class="search-icon">
-                </div>
-                <div class="login-icon"><a href=""><img src=""></a></div>
-                <div class="cart"><a href=""><img src=""></a></div>
+                <div class="navbar-btn search-icon"><img class="navbar-icon" src="assets/images/icons/search-icon.png"></div>
+                <div class="navbar-btn login-icon"><a class="navbar-link" href=""><img class="navbar-icon" src="assets/images/icons/account.png"></a></div>
+                <div class="navbar-btn cart"><a class="navbar-link" href=""><img class="navbar-icon" src="assets/images/icons/shopping-cart.png"></a></div>
             </div>
         </div>
     </div>
