--- a/assets/html/SanPham.html
+++ b/assets/html/SanPham.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Ikus Audio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
 <body>
     <div class="header-container">
         <div class="header-content">
@@ -21,13 +20,13 @@
                         <div class="selection-container">
                             <div class="selection-type">
                                 <div class="selection-type-option"><a href=""><img
-                                            src="assets/images/icons/icon-headphone.svg"> HEADPHONE</a>
+                                            src="../images/icons/icon-headphone.svg"> HEADPHONE</a>
                                     <!-- <div class="option-data">
                                         div.
                                     </div> -->
                                 </div>
                                 <div class="selection-type-option"><a href=""><img
-                                            src="assets/images/icons/icon-dac.svg"> DAC/AMP</a></div>
+                                            src="../images/icons/icon-dac.svg"> DAC/AMP</a></div>
                             </div>
                             <div class="selection-feature">
                                 <div class="selection-headphone">
@@ -65,30 +64,34 @@
                         style="border: none; border-bottom: 1px solid #fff; background: none; color: #fff; outline: none; width: 100%;">
                 </div>
                 <div class="navbar-btn search-icon">
-                    <img class="navbar-icon" src="assets/images/icons/search-icon.png">
+                    <img class="navbar-icon" src="../images/icons/search-icon.png">
                 </div>
 
                 <div class="navbar-btn login-icon"><a class="navbar-link" href=""><img class="navbar-icon"
-                            src="assets/images/icons/account.png"></a></div>
+                            src="../images/icons/account.png"></a></div>
                 <div class="navbar-btn cart"><a class="navbar-link" href=""><img class="navbar-icon"
-                            src="assets/images/icons/shopping-cart.png"></a></div>
+                            src="../images/icons/shopping-cart.png"></a></div>
             </div>
         </div>
     </div>
 
     <div class="main-container">
         <div class="main-promo">
-            <a href=""><img src="assets/images/banners/homeBanner1.png" alt=""></a>
+            <img src="../images/banners/productBanner.jpg" style="margin-top: 100px;">
             <!-- <img style="visibility: hidden;" src="assets/images/banners/homeBanner2.png" alt="">
             <img style="visibility: hidden;" src="assets/images/banners/homeBanner3.png" alt=""> -->
         </div>
         <div class="main-content">
-            <div class="new-product">
-                <div class="new-product-title">SẢN PHẨM MỚI </div>
+            <a href="" style="text-decoration: none;"><div class="main-tag">HEADPHONE</div></a>
+            <a href="" style="text-decoration: none;"><div class="main-tag">DAC/AMP</div></a>
+        </div>
+        <div class="main-content">
+            <div class="new-product" style="border-top: solid 1px black;">
+                <div class="new-product-title">HEADPHONE</div>
                 <div class="item-container">
-                    <div class="promo-item"><a href=""><img src="assets/images/products/sonywh1000xm4.jpg"></a></div>
+                    <div class="promo-item"><a href=""><img src="../images/products/fiiofh9.jpg"></a></div>
                     <div class="new-items"><a href="">
-                            <div class="new-items-img"><img src="assets/images/products/ddhifiJanus.jpg" alt=""></div>
+                            <div class="new-items-img"><img src="../images/products/ddhifiJanus.jpg" alt=""></div>
                             <div class="new-items-data">
                                 <a class="new-items-data--title" href="">
                                     <p>ddHiFi Janus E2020A</p>
@@ -117,13 +120,14 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="main-content">
             <div class="new-product">
-                <div class="new-product-title">SẢN PHẨM NỔI BẬT </div>
+                <div class="new-product-title">DAC/AMP</div>
                 <div class="item-container">
+                    <div class="promo-item"><a href=""><img src="../images/products/ifihipdac2.jpg"></a></div>
                     <div class="new-items"><a href="">
-                            <div class="new-items-img"><img src="assets/images/products/ddhifiJanus.jpg" alt=""></div>
+                            <div class="new-items-img"><img src="../images/products/ddhifiJanus.jpg" alt=""></div>
                             <div class="new-items-data">
                                 <a class="new-items-data--title" href="">
                                     <p>ddHiFi Janus E2020A</p>
@@ -138,11 +142,8 @@
                     <div class="new-items"></div>
                     <div class="new-items"></div>
                     <div class="new-items"></div>
-                    <div class="new-items"></div>
-                    <div class="new-items"></div>
-                    <div class="new-items"></div>
                     <div class="new-items"><a href="">
-                            <div class="new-items-img"><img src="assets/images/products/ddhifiJanus.jpg" alt=""></div>
+                            <div class="new-items-img"><img src="../images/products/ddhifiJanus.jpg" alt=""></div>
                             <div class="new-items-data">
                                 <a class="new-items-data--title" href="">
                                     <p>ddHiFi Janus E2020A</p>
@@ -153,18 +154,6 @@
                         </a></div>
                     <div class="more-items"><a href="">Xem tất cả sản phẩm =></a></div>
                 </div>
-            </div>
-        </div>
-
-        <div class="promo-banners-container">
-            <div class="promo-banners">
-                <div class="promo-banners-img"><a href=""><img src="assets/images/banners/VinylSaigon.png" alt=""></a>
-                </div>
-                <div class="promo-banners-img"><a href=""><img src="assets/images/banners/iFi-micro-iDSD-Signature.png"
-                            alt=""></a></div>
-                <div class="promo-banners-img"><a href=""><img src="assets/images/banners/iCamp.png" alt=""></a></div>
-                <div class="promo-banners-img"><a href=""><img src="assets/images/banners/jlab-go-air-01.png"
-                            alt=""></a></div>
             </div>
         </div>
     </div>
@@ -174,13 +163,13 @@
         <footer class="bg-dark text-center text-white">
             <!-- Grid container -->
             <div class="social-contact">
-                <div class="facebook"><a class="social-icons" href=""><img src="assets/images/icons/facebook.png"
+                <div class="facebook"><a class="social-icons" href=""><img src="../images/icons/facebook.png"
                             alt="facebook_icon"></a></div>
-                <div class="twitter"><a class="social-icons" href=""><img src="assets/images/icons/twitter.png"
+                <div class="twitter"><a class="social-icons" href=""><img src="../images/icons/twitter.png"
                             alt="twitter_icon"></a></div>
-                <div class="instagram"><a class="social-icons" href=""><img src="assets/images/icons/instagram.png"
+                <div class="instagram"><a class="social-icons" href=""><img src="../images/icons/instagram.png"
                             alt="instagram_icon"></a></div>
-                <div class="youtube"><a class="social-icons" href=""><img src="assets/images/icons/youtube.png"
+                <div class="youtube"><a class="social-icons" href=""><img src="../images/icons/youtube.png"
                             alt="youtube_icon"></a></div>
             </div>
             <div class="container p-4">
