--- a/assets/html/GioHang.html
+++ b/assets/html/GioHang.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="header-container">
+    <div class="header-container" style="top: 0;">
         <div class="header-content">
             <div class="left"><a href="">Ikus Audio</a></div>
             <div class="middle">
@@ -73,101 +73,17 @@
     </div>
 
     <div class="main-container">
-        <div class="main-promo">
-            <img src="../images/banners/productBanner2.jpg" style="margin-top: 100px;">
-            <!-- <img style="visibility: hidden;" src="assets/images/banners/homeBanner2.png" alt="">
-            <img style="visibility: hidden;" src="assets/images/banners/homeBanner3.png" alt=""> -->
-        </div>
-        <span class="page-title">HEADPHONE</span>
-        <div class="main-content">
-            <div class="main-tag" id="main-tag">FULL SIZED</div>
-            <div class="main-tag">INEAR</div>
-            <div class="main-tag">EARBUD</div>
-            <div class="main-tag">TRUE WIRELESS</div>
-        </div>
-        <div class="main-content">
-            <div class="new-product" >
-                <div class="sort-container">
-                    <div class="sort-option">SẮP XẾP THEO:</div>
-                    <form class="sort-form" action="/action_page.php">
-                        <select name="product-status" id="product-status">
-                            <option value="newest">Mới nhất</option>
-                            <option value="oldest">Cũ Nhất</option>
-                            <option value="lowToHigh">Từ thấp tới cao</option>
-                            <option value="highToLow">Từ cao tới thấp</option>
-                        </select>
-                    </form> 
-                </div>
+        <div class="cart-container">
+            <div class="payment-content">
+
             </div>
-        </div>
-        <div class="main-content">
-            <div class="new-product" >
-                <div class="left-menu">
-                    <div class="brand-filter">
-                        <div class="brand-filter-title">THƯƠNG HIỆU</div>
-                        <div class="brand-container">
-                            <label class="container">
-                                <input type="checkbox" checked="checked" value="One">
-                                <span class="checkmark"></span> One
-                            </label>
-                            <label class="container">
-                                <input type="checkbox" checked="checked" value="One">
-                                <span class="checkmark"></span> One
-                            </label>
-                        </div>
-                    </div>
-                    <div class="brand-filter price-filter">
-                        <div class="brand-filter-title">KHOẢNG GIÁ</div>
-                        <div class="price-container">Chọn khoảng giá mong muốn.
-                            <input type="number" name="" id="price-input">
-                            <span>-</span>
-                            <input type="number" name="" id="price-input">
-                        </div>
-                    </div>
-                </div>
-                <div class="product-list">
-                    <div class="item-container">
-                        <div class="new-items"><a href="">
-                                <div class="new-items-img"><img src="../images/products/ddhifiJanus.jpg" alt=""></div>
-                                <div class="new-items-data">
-                                    <a class="new-items-data--title" href="">
-                                        <p>ddHiFi Janus E2020A</p>
-                                    </a>
-                                    <div class="newprice">2.490.000 đ</div>
-                                    <div class="oldprice">4.990.000 đ</div>
-                                </div>
-                            </a></div>
-                        <div class="new-items"></div>
-                        <div class="new-items"></div>
-                        <div class="new-items"></div>
-                        <div class="new-items"></div>
-                        <div class="new-items"></div>
-                        <div class="new-items"></div>
-                        <div class="new-items"><a href="">
-                                <div class="new-items-img"><img src="../images/products/ddhifiJanus.jpg" alt=""></div>
-                                <div class="new-items-data">
-                                    <a class="new-items-data--title" href="">
-                                        <p>ddHiFi Janus E2020A</p>
-                                    </a>
-                                    <div class="newprice">2.490.000 đ</div>
-                                    <div class="oldprice">4.990.000 đ</div>
-                                </div>
-                            </a></div>
-                    </div>
-                    <div class="pagination">
-                        <a href="#">«</a>
-                        <a href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#">4</a>
-                        <a href="#">»</a>
-                      </div>
-                </div>
+            <div class="cart-content">
+
             </div>
         </div>
     </div>
 
-    <div class="footer-container">
+    <div class="footer-container" >
         <!-- Footer -->
         <footer class="bg-dark text-center text-white">
             <!-- Grid container -->
