--- a/assets/html/GioHang.html
+++ b/assets/html/GioHang.html
@@ -75,7 +75,30 @@
     <div class="main-container">
         <div class="cart-container">
             <div class="payment-content">
-
+                <span class="payment-title">Gio Hang</span><br>
+                <div class="line"></div><br>
+                <span class="customer-info-title">thong tin khach hang</span>
+                <div class="main-payment-info">
+                    <form action="" id="customer-info">
+                        <label for="">Ho ten</label><br>
+                        <input type="text" class="user-input" id=""><br>
+                        <label for="">Dia chi</label><br>
+                        <input type="text" class="user-input" id=""><br>
+                        <label for="">So dien thoai</label><br>
+                        <input type="number" class="user-input" name="" id=""><br>
+                        <label for="">Ghi chu</label><br>
+                        <input type="text" class="user-input" id=""><br>
+                    </form>
+                </div>
+                <div class="main-payment-method main-payment-info">
+                    <span class="customer-info-title">Phuong thuc thanh toan</span>
+                    <form action="" id="payment-method">
+                        <input type="checkbox" class="payment-checkbox" name="payment" id="">COD     <br>
+                        <input type="checkbox" class="payment-checkbox" name="payment" id="">VISA <br>
+                        <input type="checkbox" class="payment-checkbox" name="payment" id="a">ATM <br>
+                        <input type="checkbox" class="payment-checkbox" name="payment" id="">Vi dien tu <br>
+                    </form>
+                </div>
             </div>
             <div class="cart-content">
 
