--- a/trangchu.html
+++ b/trangchu.html
@@ -11,52 +11,145 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="assets/css/style.css" />
     <script src="lib/vue.global.prod.js"></script>
   </head>
   <body>
     <div id="app">
-      <nav aria-label="Page navigatio">
-        <div class="container">
-          <p v-for="product in products">
-            {{ product.productId }} - {{ product.productName }}
-          </p>
+      <app-header></app-header>
+      <div class="main-container">
+        <div class="main-promo">
+          <img
+            src="../images/banners/productBanner2.jpg"
+            style="margin-top: 100px"
+          />
+          <!-- <img style="visibility: hidden;" src="assets/images/banners/homeBanner2.png" alt="">
+            <img style="visibility: hidden;" src="assets/images/banners/homeBanner3.png" alt=""> -->
         </div>
+        <div class="main-content">
+          <div class="main-tag" id="main-tag">FULL SIZED</div>
+          <div class="main-tag">INEAR</div>
+          <div class="main-tag">EARBUD</div>
+          <div class="main-tag">TRUE WIRELESS</div>
+        </div>
+        <div class="main-content">
+          <div class="new-product">
+            <div class="search-bar">
+              <input
+                id="search-input"
+                type="search"
+                name="s"
+                placeholder="Gõ để tìm kiếm"
+                style="
+                  border: 1px solid rgb(116, 116, 116);
+                  border-radius: 38px;
+                  border-image: initial;
+                  background: none;
+                  width: 500px;
+                  height: 60px;
+                  padding: 30px;
+                "
+              />
+              <div class="navbar-btn search-icon">
+                <img
+                  class="navbar-icon"
+                  src="assets/images/icons/search-icon.png"
+                />
+              </div>
+            </div>
 
-        <ul class="pagination justify-content-center">
-          <li
-            class="page-item"
-            :class="{ disabled: !canPreviousPage }"
-            @click="onPreviousPage()"
-          >
-            <a class="page-link" href="#" tabindex="-1">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li
-            v-for="page in pages"
-            class="page-item"
-            :class="{ disabled: page == currentPage }"
-            @click="onPageChange(page)"
-          >
-            <a class="page-link" href="#">{{ page }}</a>
-          </li>
-          <li
-            class="page-item"
-            :class="{ disabled: !canNextPage }"
-            @click="onNextPage()"
-          >
-            <a class="page-link" href="#">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span></a
-            >
-          </li>
-        </ul>
-      </nav>
+            <div class="sort-container">
+              <div class="sort-option">SẮP XẾP THEO:</div>
+              <form class="sort-form" action="/action_page.php">
+                <select name="product-status" id="product-status">
+                  <option value="newest">Mới nhất</option>
+                  <option value="oldest">Cũ Nhất</option>
+                  <option value="lowToHigh">Từ thấp tới cao</option>
+                  <option value="highToLow">Từ cao tới thấp</option>
+                </select>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="main-content">
+          <div class="new-product">
+            <div class="left-menu">
+              <div class="brand-filter">
+                <div class="brand-filter-title">THƯƠNG HIỆU</div>
+                <div class="brand-container">
+                  <label class="container">
+                    <input type="checkbox" checked="checked" value="One" />
+                    <span class="checkmark"></span> One
+                  </label>
+                  <label class="container">
+                    <input type="checkbox" checked="checked" value="One" />
+                    <span class="checkmark"></span> One
+                  </label>
+                </div>
+              </div>
+              <div class="brand-filter price-filter">
+                <div class="brand-filter-title">KHOẢNG GIÁ</div>
+                <div class="price-container">
+                  Chọn khoảng giá mong muốn.
+                  <input type="number" name="" id="price-input" />
+                  <span>-</span>
+                  <input type="number" name="" id="price-input" />
+                </div>
+              </div>
+            </div>
+            <div class="product-list">
+              <div class="item-container">
+                <div class="new-items">
+                  <a href="#">
+                    <div class="new-items-img">
+                      <img src="../images/products/ddhifiJanus.jpg" alt="" />
+                    </div>
+                    <div class="new-items-data">
+                      <a class="new-items-data--title" href="">
+                        <p>ddHiFi Janus E2020A</p>
+                      </a>
+                      <div class="newprice">2.490.000 đ</div>
+                      <div class="oldprice">4.990.000 đ</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="new-items"></div>
+                <div class="new-items"></div>
+                <div class="new-items"></div>
+                <div class="new-items"></div>
+                <div class="new-items"></div>
+                <div class="new-items"></div>
+                <div class="new-items">
+                  <a href="">
+                    <div class="new-items-img">
+                      <img src="../images/products/ddhifiJanus.jpg" alt="" />
+                    </div>
+                    <div class="new-items-data">
+                      <a class="new-items-data--title" href="">
+                        <p>ddHiFi Janus E2020A</p>
+                      </a>
+                      <div class="newprice">2.490.000 đ</div>
+                      <div class="oldprice">4.990.000 đ</div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="pagination">
+                <a href="#">«</a>
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">»</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
   <script src="utils/data.js"></script>
   <script src="utils/commons.js"></script>
+  <script src="scripts/components.js"></script>
   <script src="scripts/trangchu.js"></script>
 </html>
