--- a/trangchu.html
+++ b/trangchu.html
@@ -40,6 +40,7 @@
                 type="search"
                 name="s"
                 placeholder="Gõ để tìm kiếm"
+                maxlength="40"
                 style="
                   border: 1px solid rgb(116, 116, 116);
                   border-radius: 38px;
@@ -50,9 +51,9 @@
                   padding: 30px;
                 "
               />
-              <div class="navbar-btn search-icon">
+              <div class="search-icon">
                 <img
-                  class="navbar-icon"
+                  class="search-icon-img"
                   src="assets/images/icons/search-icon.png"
                 />
               </div>
