--- a/assets/html/GioHang.html
+++ b/assets/html/GioHang.html
@@ -93,15 +93,17 @@
                 <div class="main-payment-method main-payment-info">
                     <span class="customer-info-title">Phuong thuc thanh toan</span>
                     <form action="" id="payment-method">
-                        <input type="checkbox" class="payment-checkbox" name="payment" id="">COD     <br>
-                        <input type="checkbox" class="payment-checkbox" name="payment" id="">VISA <br>
-                        <input type="checkbox" class="payment-checkbox" name="payment" id="a">ATM <br>
-                        <input type="checkbox" class="payment-checkbox" name="payment" id="">Vi dien tu <br>
+                        <input type="radio" class="payment-checkbox" name="payment" id="">COD  <br>
+                        <input type="radio" class="payment-checkbox" name="payment" id="">VISA <br>
+                        <input type="radio" class="payment-checkbox" name="payment" id="a">ATM <br>
+                        <input type="radio" class="payment-checkbox" name="payment" id="">Vi dien tu <br>
                     </form>
                 </div>
             </div>
             <div class="cart-content">
-
+                <div class="cart-list"></div>
+                <div class="line"></div>
+                <div class="complete-payment"></div>
             </div>
         </div>
     </div>
