Replace product brand by const

--- a/assets/html/GioHang.html
+++ b/assets/html/GioHang.html
@@ -75,18 +75,18 @@
     <div class="main-container">
         <div class="cart-container">
             <div class="payment-content">
-                <span class="payment-title">Gio Hang</span><br>
+                <span class="payment-title">Giỏ Hàng</span><br>
                 <div class="line"></div><br>
-                <span class="customer-info-title">thong tin khach hang</span>
+                <span class="customer-info-title">Thông tin khách hàng</span>
                 <div class="main-payment-info">
                     <form action="" id="customer-info">
-                        <label for="">Ho ten</label><br>
-                        <input type="text" class="user-input" id=""><br>
-                        <label for="">Dia chi</label><br>
-                        <input type="text" class="user-input" id=""><br>
-                        <label for="">So dien thoai</label><br>
-                        <input type="number" class="user-input" name="" id=""><br>
-                        <label for="">Ghi chu</label><br>
+                        <label for="">Họ tên *</label><br>
+                        <input type="text" class="user-input" id="" required><br>
+                        <label for="">Địa chỉ *</label><br>
+                        <input type="text" class="user-input" id="" required><br>
+                        <label for="">Số điện thoại *</label><br>
+                        <input type="text" class="user-input" name="" id="" required><br>
+                        <label for="">Ghi chú</label><br>
                         <input type="text" class="user-input" id=""><br>
                     </form>
                 </div>
@@ -95,7 +95,7 @@
                     <form action="" id="payment-method">
                         <input type="radio" class="payment-checkbox" name="payment" id="">COD  <br>
                         <input type="radio" class="payment-checkbox" name="payment" id="">VISA <br>
-                        <input type="radio" class="payment-checkbox" name="payment" id="a">ATM <br>
+                        <input type="radio" class="payment-checkbox" name="payment" id="">ATM <br>
                         <input type="radio" class="payment-checkbox" name="payment" id="">Vi dien tu <br>
                     </form>
                 </div>
