Add cart and chitietsanpham layout

--- a/assets/html/ChiTietSanPham.html
+++ b/assets/html/ChiTietSanPham.html
@@ -73,41 +73,25 @@
     </div>
 
     <div class="main-container">
-        <div class="cart-container">
-            <div class="payment-content">
-                <span class="payment-title">Giỏ Hàng</span><br>
-                <div class="line"></div><br>
-                <span class="customer-info-title">Thông tin khách hàng</span>
-                <div class="main-payment-info">
-                    <form action="" id="customer-info">
-                        <label for="">Họ tên *</label><br>
-                        <input type="text" class="user-input" id="" required><br>
-                        <label for="">Địa chỉ *</label><br>
-                        <input type="text" class="user-input" id="" required><br>
-                        <label for="">Số điện thoại *</label><br>
-                        <input type="text" class="user-input" name="" id="" required><br>
-                        <label for="">Ghi chú</label><br>
-                        <input type="text" class="user-input" id=""><br>
-                    </form>
+        <div class="item-detail">
+            <div class="item-detail-img"><img src="../images/products/wh1000xm4.jpg" alt=""></div>
+            <div class="item-detail-info">
+                <h2 class="title">Sony WH-1000XM4</h2>
+                <h6 class="brand-name">THƯƠNG HIỆU <a href="#">SONY</a></h6>
+                <span class="item-price">6.390.000 đ</span>
+                <div class="guarantee">
+                    <div class="guarantee-img"><img src="../images/icons/icon-shield.svg" alt=""></div>
+                    <div class="guarantee-time">Bảo hành 12 tháng.</div>
                 </div>
-                <div class="main-payment-method main-payment-info">
-                    <span class="customer-info-title">Phuong thuc thanh toan</span>
-                    <form action="" id="payment-method">
-                        <input type="radio" class="payment-checkbox" name="payment" id="">COD  <img style="height: 30px;" src="../images/icons/COD.png" alt=""> <br>
-                    </form>
-                </div>
-            </div>
-            <div class="cart-content">
-                <div class="total">TỔNG TIỀN: </div>
-                <div class="complete-payment">THANH TOÁN</div>
-                <div class="line2"></div> <br>
-                <div class="cart-list">
+                <div class="buy-btn">THÊM VÀO GIỎ HÀNG</div> <br>
+                <div class="more-detail">
                     <ul>
-                        <li> <div class="cart-list-item"> <img src="../images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="../images/icons/bin.png" alt=""></div> </div></li>
-                        <li> <div class="cart-list-item"> <img src="../images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="../images/icons/bin.png" alt=""></div> </div></li>
-                        <li> <div class="cart-list-item"> <img src="../images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="../images/icons/bin.png" alt=""></div> </div></li>
-                        <li> <div class="cart-list-item"> <img src="../images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="../images/icons/bin.png" alt=""></div> </div></li>
-                    
+                        <li>Màu sắc đang có sẵn (cập nhật ngày 01/12/2021): Black, Silver, Midnight Blue.</li>
+                        <li>Sony WH-1000XM4 tiếp tục giữ vững ngôi vị tai nghe chống ồn tốt nhất trên thị trường hiện nay</li>
+                        <li>Bluetooth 5.0 cùng khả năng kết nối 2 thiết bị</li>
+                        <li>Thời lượng pin 30h, sạc nhanh 5 phút</li>
+                        <li>Chế độ speak to chat thông minh duy nhất chỉ có trên WH-1000XM4</li>
+                        <li>Sony WH-1000XM4 là tai nghe đầu tiên của Sony được trang bị DSEE EXTREME</li>
                     </ul>
                 </div>
             </div>
