--- a/giohang.html
+++ b/giohang.html
@@ -6,11 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giỏ hàng</title>
     <script src="lib/vue.global.prod.js"></script>
+    <script src="lib/vue.global.prod.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div id="app"><h2>Giỏ hàng</h2></div>
+    <div id="app">
+      <app-header></app-header>
+
+      <div class="main-container">
+        <div class="cart-container">
+            <div class="payment-content">
+                <span class="payment-title">Giỏ Hàng</span><br>
+                <div class="line"></div><br>
+                <span class="customer-info-title">Thông tin khách hàng</span>
+                <div class="main-payment-info">
+                    <form action="" id="customer-info">
+                        <label for="">Họ tên *</label><br>
+                        <input type="text" class="user-input" id="" required><br>
+                        <label for="">Địa chỉ *</label><br>
+                        <input type="text" class="user-input" id="" required><br>
+                        <label for="">Số điện thoại *</label><br>
+                        <input type="text" class="user-input" name="" id="" required><br>
+                        <label for="">Ghi chú</label><br>
+                        <input type="text" class="user-input" id=""><br>
+                    </form>
+                </div>
+                <div class="main-payment-method main-payment-info">
+                    <span class="customer-info-title">Phuong thuc thanh toan</span>
+                    <form action="" id="payment-method">
+                        <input type="radio" class="payment-checkbox" name="payment" id="">COD  <img style="height: 30px;" src="assets/images/icons/COD.png" alt=""> <br>
+                    </form>
+                </div>
+            </div>
+            <div class="cart-content">
+                <div class="total">TỔNG TIỀN: </div>
+                <div class="complete-payment">THANH TOÁN</div>
+                <div class="line2"></div> <br>
+                <div class="cart-list">
+                    <ul>
+                        <li> <div class="cart-list-item"> <img src="assets/images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="assets/images/icons/bin.png" alt=""></div> </div></li>
+                        <li> <div class="cart-list-item"> <img src="assets/images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="assets/images/icons/bin.png" alt=""></div> </div></li>
+                        <li> <div class="cart-list-item"> <img src="assets/images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="assets/images/icons/bin.png" alt=""></div> </div></li>
+                        <li> <div class="cart-list-item"> <img src="assets/images/products/moondrop_kxxs.jpg"> Moondrop KXXS 3390000 <div class="delete-item"><img src="assets/images/icons/bin.png" alt=""></div> </div></li>
+                    
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+      <app-footer></app-footer>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
+    </div>
   </body>
   <script src="utils/data.js"></script>
   <script src="utils/commons.js"></script>
+  <script src="scripts/components.js"></script>
   <script src="scripts/giohang.js"></script>
 </html>
