Add currency format

--- a/trangchu.html
+++ b/trangchu.html
@@ -107,7 +107,7 @@
                       <a class="new-items-data--title" href="">
                         <p>{{ product.name }}</p>
                       </a>
-                      <div class="newprice">{{ product.price }} đ</div>
+                      <div class="newprice">{{ formatPrice(product.price) }} đ</div>
                     </div>
                   </a>
                 </div>
