--- a/assets/html/donhangdadat.html
+++ b/assets/html/donhangdadat.html
@@ -77,6 +77,27 @@
             <h2 title>ĐẶT HÀNG THÀNH CÔNG</h2>
             <div class="bill-body">
                 <span class="customer-title">Tên khách hàng:</span>
+                <span class="bill-info">Nguyen Van A</span>
+                <span class="customer-title">Số điện thoại:</span>
+                <span class="bill-info">Nguyen Van A</span>
+                <span class="customer-title">Địa chỉ:</span>
+                <span class="bill-info">Nguyen Van A</span>
+                <span class="customer-title">Ghi chú:</span>
+                <span class="bill-info">Nguyen Van A</span>
+                <div class="line2"></div>
+                <table class="cart-table">
+                    <tr>
+                        <td>STT</td>
+                        <td>Món hàng</td>
+                        <td>Thành tiền</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td></td>
+                        <td>Thành tiền</td>
+                    </tr>
+                </table>
+
             </div>
         </div>
     </div>
